# progetti-info

c/battaglia navale/: battaglia.c
c/chip8/Chip-8-Emu/: CMakeLists.txt  main.cpp
c/fibonacci/: Untitled1.cpp
c/pali compagni/: 0,0.cpp  400k.cpp  CHAR.cpp  Untitled1.cpp  magia.cpp  mat.cpp  palindromo.cpp  tris base rebecca.cpp
c/pari o dispari/: pari o dispari.cpp
c/prove a caso/: Untitld1.cpp  Untitled1.cpp  gui.c  max.c
c/snake/: Untitled1.cpp
c/tris/: Untitled1.cpp
pyt/Chip-8/: main.py
pyt/tris minimax/: main.py
